# code-snippets

./: .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: commit.md
src/: test.py
src/agno/: README.md
src/agno/mlx/: BENCHMARK_README.md  benchmark.py  compare_llama3.py  demo.py
src/agno/tutorial/: 00_agno_agent.py  00_ollama_agent.py  00_show_api_key.py  01_hackernews_agent.py  02_async_agent.py  03_hf_agent.py  04_history_in_context.py  05_session_summary.py  06_session_history.py  07_cache.py  08_structured_output.py  09_structured_input_agent.py  10_typesafe_research_agent.py  12_system_message.py  21_first_workflow.py  22_post_hook.py
src/langchain/ch1/: a-llm.py
src/llm/vibe-thinker/: demo.py
src/misc/: convert-all-to-markdown.py  convert-to-markdown.py  download-youtube.py  markdown_to_word.py
src/mlx-lm/: chat.py  convert.md  vibe-thinker.py
src/mlx_lm/: chat_streaming.py
src/speech-to-text/distil-whisper/: demo.py
src/speech-to-text/parakeet/: README.md  streaming_transcription.py  transcribe.py
src/speech-to-text/whisper/: structure_transcription.py  transcribe-by-segment.py  transcribe-mic.py  transcribe-with-diarization.py  whisper-mp3.py
src/text-to-speech/: demo1.py
src/youtube/: demo.py
